# new

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  env.example.json  go.mod  go.sum  index.ts  main.go  make.ts  package.json
.cli/: build.ts  config.ts  console.ts  help.ts  init.ts
.cli/templates/: model.ts
internal/controller/middleware/: auth.go
internal/database/model/: user.go
internal/handler/controller/: home.go  user.go
internal/handler/middleware/: auth.go
internal/handler/routes/: routes.go
internal/http/routes/: routes.go
internal/http/validator/: user.go
internal/model/: user.go
internal/ui/pages/: home.qtpl  home.qtpl.go
internal/ui/view/: home.go  home.qtpl.go
internal/utils/auth/: session.go  session_construct.go  session_constructs.go  token.go
internal/utils/config/: config.go
internal/utils/db/: connection.go  fill.go  migration.go  mongo_fun.go  mongo_paginate.go  mongo_types.go  mongo_utils.go  odm.go  types.go
internal/utils/err/: codes.go  http_error.go  mongo.go  validation_error.go
internal/utils/fm/: placeholder.go
internal/utils/handler/: context.go  context_filter.go  handler.go
internal/utils/lang/: lang.go
internal/utils/log/: log.go  log_dump.go
internal/utils/logs/: log.go  log_dump.go
internal/utils/router/: router.go  routes.go
internal/utils/server/: server.go
internal/utils/str/: formatter.go  placeholder.go
internal/utils/validation/: date.go  db.go  in_nin.go  number.go  regex.go  required.go  rules.go  validation.go  validations_old.go
src/: main.rs
(+70 files in other folders)
